kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jblog
  namespace: jblog
spec: 
  selector:
    matchLabels:
      app: jblog
  replicas: 1
  template:
    metadata:
      labels:
        app: jblog
    spec:
      containers:
      - name: jblog
        image: jonas27test/goserver:latest
        # args: ["-serverCrt", "tls.crt","-serverKey", "tls.key"]
        ports:
        - name: http
          containerPort: 8080
        - name: https 
          containerPort: 4443
        volumeMounts:
          - mountPath: /static
            name: jblog-storage
      volumes:
      - name: jblog-storage
        hostPath:
          path: "/volumes/jblog"
      restartPolicy: Always
