kube/katchblog.yaml
apiVersion: v1
kind: Service
metadata:
  name: jblog
  namespace: jblog
spec:
  ports:
  - port: 80
    name: http
    targetPort: http
  - port: 443
    name: https
    targetPort: https
  selector:
    app: jblog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jblog
  namespace: jblog
spec: 
  selector:
    matchLabels:
      app: jblog
  replicas: 1
  template:
    metadata:
      labels:
        app: jblog
    spec:
      containers:
      - name: jblog
        image: jonas27test/goserver:latest
        # args: ["-serverCrt", "tls.crt","-serverKey", "tls.key"]
        ports:
        - name: http
          containerPort: 8080
        - name: https 
          containerPort: 4443
        volumeMounts:
          - mountPath: /static
            name: jblog-storage
      volumes:
      - name: jblog-storage
        hostPath:
          path: "/volumes/jblog"
      restartPolicy: Always
