kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: jblog
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /*
spec:
  tls:
  - hosts:
    - jonasburster.de
    - www.jonasburster.com
    secretName: jblog-cert
  rules:
  - host: jonasburster.de
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          serviceName: jblog
          servicePort: 80
  - host: www.jonasburster.com
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          serviceName: jblog
          servicePort: 80
